# CallLens

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  Procfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260607_0103_a192367e747a_create_users_table.py  20260607_1121_6a831ce6d751_phase2a_models.py  20260607_1200_phase3a_scoring_models.py  20260608_0000_phase4b_analysis_coaching_audit_agentrun.py  20260609_0000_phase7a_pgvector_embeddings.py  20260609_0100_phase8a_rubric_crud.py  20260609_0200_phase9a_redaction.py  20260609_0300_phase10a_topics.py  20260609_0400_phase11b_is_demo.py
backend/src/calllens/: main.py
backend/src/calllens/agents/: evidence.py  graph.py  llm.py  metrics.py  sentiment.py  specialists.py  supervisor.py
backend/src/calllens/api/v1/: agents.py  analytics.py  auth.py  calls.py  coaching.py  (+5 more)
backend/src/calllens/core/: config.py  deps.py  exceptions.py  logging.py  middleware.py  scoring.py  security.py
backend/src/calllens/db/: base.py  session.py
backend/src/calllens/embeddings/: __init__.py  backfill.py  base.py  factory.py  gemini.py  local.py  stub.py
backend/src/calllens/redaction/: __init__.py  backfill.py  base.py  factory.py  presidio.py  regex.py
backend/src/calllens/schemas/: analysis.py  analytics.py  auth.py  calls.py  rubric.py  search.py
backend/src/calllens/seed/: __main__.py  demo.py  export_audio.py  import_transcripts.py  rubric.py  scenarios.py  topics.py  tts.py
backend/src/calllens/services/: auth_service.py  call_events.py  call_pipeline.py  rubric_service.py  scoring_service.py  search_service.py  seed.py
backend/src/calllens/storage/: __init__.py  base.py  factory.py  local.py  s3.py
backend/src/calllens/tasks/: __init__.py  celery_app.py  pipeline.py
backend/src/calllens/topics/: backfill.py  base.py  factory.py  llm.py  stub.py
backend/src/calllens/transcription/: __init__.py  assemblyai.py  base.py  factory.py  groq_whisper.py  merge.py  null_diarizer.py  passthrough_diarizer.py  pyannote_diarizer.py  stub.py  whisper.py
backend/tests/: conftest.py  test_agent_performance_api.py  test_agents_api.py  test_analysis_api.py  test_analytics_api.py  test_auth.py  test_calls.py  test_coaching_api.py  test_deploy_12a.py  test_evidence.py  test_export_audio.py  test_graph.py  test_health.py  test_infra_11a.py  test_metrics.py  test_migration_4b.py  test_models_4b.py  test_pipeline_e2e.py  test_redaction.py  test_reprocess.py  test_rubrics.py  test_schemas_4b.py  test_scores_api.py  test_scoring_service.py  test_scoring_service_4b.py  test_search.py  test_seed_11b.py  test_sentiment.py  test_specialists.py  test_team_analytics_api.py  test_topics.py
(+121 files in other folders)
