[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calllens"
version = "0.1.0"
description = "AI-powered call-quality analytics platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-json-logger>=2.0.7",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "email-validator>=2.3.0",
    "python-multipart>=0.0.32",
    "aiofiles>=24.1.0",
    "python-magic>=0.4.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "faker>=25.0.0",
]
transcription-local = [
    "faster-whisper>=1.1.0",
    "pyannote.audio>=3.3.0",
    "torchaudio>=2.3.0",
]
transcription-groq = [
    "groq>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/calllens"]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "faker>=25.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
]
ignore = [
    "E501",  # line too long — ruff format handles this
    "B008",  # do not perform function calls in default arguments (FastAPI uses this)
]

[tool.ruff.lint.isort]
known-first-party = ["calllens"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["celery.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["magic"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["faster_whisper.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pyannote.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["torchaudio.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["groq.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["aiofiles.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.hatch.metadata]
allow-direct-references = true
